Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29661

QtWebProcess.exe cannot find Qt dlls in libexec directory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.2
    • 5.0.1
    • None
    • Windows Vista 32
      msvc2010 Qt 5.0.01
    • 3f471c069d608282db2b0e0fa5e8f0547778cddb

    Description

      I run the following code in qmlscene:

      import QtQuick 2.0
      import QtWebKit 3.0
      
      WebView {
          width: 100
          height: 100
          url: "http://www.digia.com"
      
      }
      

      QtWebProcess.exe crashes and the windows stays white (no rendering of any web content).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes